// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchBar > Should render searchbar correctly 1`] = `
<div>
  <div
    class="search-container"
  >
    <input
      id="search"
      name="search"
      placeholder="Buscar..."
      type="text"
      value=""
    />
    <button>
      Buscar
    </button>
  </div>
</div>
`;

exports[`SearchBar > Should render the correct placeholder value 1`] = `
<div>
  <div
    class="search-container"
  >
    <input
      id="search"
      name="search"
      placeholder="test"
      type="text"
      value=""
    />
    <button>
      Buscar
    </button>
  </div>
</div>
`;
